Spacing fixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -122,17 +122,21 @@ body {
 }
 
 .mobile-navbar {
-    background-color: #F8F8F8;
+    background-color: white;
     border-top: 1px solid #E7E7E7;
     text-align: center;
     font-size: 16px;
-
     position: fixed;
     left: 0;
     bottom: 0;
     height: 60px;
     width: 100%;
+
+    .navbar-item {
+        padding: 0.5rem 1.25rem;
+    }
 }
+
 
 .card-footer-item {
     padding: 0px !important;
